ops/kubernetes/client/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: production
  name: labralords-client
  annotations:
    kube-score/ignore: container-security-context-readonlyrootfilesystem
  labels:
    app: labralords-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: labralords-client
  template:
    metadata:
      labels:
        app: labralords-client
    spec:
      containers:
      - name: labralords-client
        image: labralords.azurecr.io/labralords-client:v1.0.0-alpha
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        readinessProbe:
          tcpSocket:
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        resources:
          requests:
            cpu: 150m
            memory: 256Mi
          limits:
            cpu: 300m
            memory: 512Mi
        securityContext:
          capabilities:
            drop:
              - all
            add: [ "NET_ADMIN", "CHOWN", "NET_BIND_SERVICE", "SETUID", "SETGID" ]
          runAsUser: 10001
          runAsGroup: 10001
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      automountServiceAccountToken: false
      restartPolicy: Always
      shareProcessNamespace: false
      terminationGracePeriodSeconds: 30
  progressDeadlineSeconds: 600
  revisionHistoryLimit: 10
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
