ops/kubernetes/client/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: production
  name: labralords-client-service
spec:
  selector:
    app: labralords-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
