ops/kubernetes/client/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: labralords-client-ingress
  namespace: production
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  tls:
  - hosts:
      - labralords.com
      - www.labralords.com
    secretName: cloudflare-tls
  rules:
  - host: labralords.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: labralords-client-service
            port:
              number: 80
  - host: www.labralords.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: labralords-client-service
            port:
              number: 80
