ops/kubernetes/client/base/network-policy.yaml
# internet connect to api
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internet-connect-client
  namespace: production
spec:
  podSelector:
    matchLabels:
      app: labralords-client
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
  policyTypes:
  - Ingress
  - Egress
